- Added the Upgradeable category that lists all installed applications with
  available upgrades.
- AppSnap now displays download progress information.

Internal Improvements
- Support for parallel downloading in order to make best use of the available
  net speed.
- Added MAJORMINORSUB_VERSION in order to support ImageMagick uninstallation.

Bug Fixes
- Fixed bug in "Update DB" where a failed DB download was wiping out the current
  DB and killing AppSnap.
- Installer filenames which do not contain any version information are now 
  redownloaded (if more than a day since the last download) since we have no way
  to know if the file has changed.
- Obsolete sections in installed.ini are now filtered out.
- Added some more error checking to update DB.

Scrape Fixes
- Fixed Adobe Reader scraping and download link.
- Fixed Firefox and Thunderbird download links, ftp was not working.
- WinSCP version scraping now done on Sourceforge.
- Dia's version search now includes pre-releases - e.g. 0.96-pre4
- uTorrent now has sub-version numbering - e.g. 1.6.1

Version 1.2.1
-------------
New Applications
- Internet : TightVNC
- Fun and Games : BZFlag, Celestia, Stellarium, TuxPaint, TuxPaint Stamps
- Development : MySQL
- Productivity : Blender3D, DeepBurner Free, Dia, Gimp
- Utilities : Ant Renamer, KeePass
- Libraries : GTK+
- Entertainment : Juice Receiver

Internal Improvements
- Added support for zipped installers. AppSnap now extracts the ZIP and then 
  executes the installer.
- All background actions are now performed in a separate thread to prevent the 
  AppSnap GUI from locking up.

Bug Fixes
- SourceForge just rolled out new changes which broke all applications hosted
  with them. All impacted application scrape and download URLs updated.
- Fixed bug where AppSnap GUI was crashing in Windows 2000 since the install
  icon was not available in shell32.dll. Issue was not seen on XP and 2003 which
  had added a whole bunch of new icons.