@@ -18,6 +18,7 @@ Internal Improvements
 - Support for parallel downloading in order to make best use of the available
   net speed.
 - Added MAJORMINORSUB_VERSION in order to support ImageMagick uninstallation.
+- Intelligent Python based build system to simply packaging AppSnap.
 
 Bug Fixes
 - Fixed bug in "Update DB" where a failed DB download was wiping out the current
